# Chapter6

./: .gitmodules  Dockerfile  Dockerfile.Ubuntu18.04  Dockerfile.Ubuntu20.04  Dockerfile.debian  Dockerfile.vnc  FindVector.cmake  License.txt  Makefile  README.autovirtualbox  README.docker  README.md  README.virtualbox  Setup.Ubuntu20.04  autovirtualbox.sh  docker_build.sh  dockerbash.sh  dockerit.sh  dockertest.sh  dockervnc.sh
GlobalSumsVectorized/: CMakeLists.txt  Makefile  globalsums.c  globalsums.h  kahan_fog_vector.cpp  kahan_fog_vector8.cpp  kahan_gcc_vector.c  kahan_gcc_vector8.c  kahan_intel_vector.c  kahan_intel_vector8.c  kahan_sum.c  serial_sum.c  serial_sum_fog_vector.cpp  serial_sum_fog_vector8.cpp  serial_sum_gcc_vector.c  serial_sum_gcc_vector8.c  serial_sum_intel_vector.c  serial_sum_intel_vector8.c  serial_sum_vector.c  serial_sum_vector8.c  test.c
GlobalSumsVectorized/cmake/Modules/: FindVector.cmake
autovec/: CMakeLists.txt  stream_triad.c  timer.c
autovec_function/: CMakeLists.txt  stream_triad.c
autovec_restrict/: CMakeLists.txt  stream_triad.c  timer.h
globalsums/: CMakeLists.txt  globalsums.c
mass_sum/: CMakeLists.txt  main.c  mass_sum.c  mass_sum.h
stencil/: CMakeLists.txt  stencil.c  stencil_opt1.c  stencil_opt2.c
stencil/cmake/Modules/: Findlikwid.cmake
timestep/: CMakeLists.txt  CMakeLists.txt.detailed  Makefile.simple  main.c  timestep.c  timestep.c.opt  timestep.c.opt1  timestep.c.opt2  timestep.c.opt3  timestep.c.opt4  timestep.h  timestep.h.opt4  timestep_opt3.c
